# gestion-client-gui

./: ARCHITECTURE.md  BUILD.md  CMakeLists.txt  DEVELOPER.md  INDEX.md  Makefile  PROJECT_SUMMARY.md  README.md  build.bat  build.ps1  build.sh  build_and_run.sh  build_debug.bat  build_log.txt  cflags.txt  chat.py  libs.txt  pers.txt  projet.c  projet_gui.c  projet_gui_fixed.c
